# FindFriendBot

./: CMakeLists.txt  README.md
conf/: config.ini
doc/mysql/: db_tok.sql
script/: sync.sh
src/: Assisant.cpp  Assisant.h  Bot.cpp  Bot.h  Conf.cpp  Conf.h  DBConn.cpp  DBConn.h  Lock.h  LockedQueue.h  Logger.cpp  Logger.h  Member.cpp  Member.h  MemberMgr.cpp  MemberMgr.h  MemberModel.cpp  MemberModel.h  Util.cpp  Util.h  main.cpp
